a few options on Logger network